10-external-services/quotes-destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: dummyjson-external
  namespace: quotes-external
  labels:
    app.kubernetes.io/part-of: connectivity-link-tutorial
spec:
  host: dummyjson.com
  trafficPolicy:
    tls:
      mode: SIMPLE
