10-external-services/quotes-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quotes-external
  namespace: openshift-ingress
  labels:
    app.kubernetes.io/part-of: connectivity-link-tutorial
spec:
  host: quotes-external.${CLUSTER_DOMAIN}
  to:
    kind: Service
    name: api-gateway-openshift-default
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
